Adding CSS grid content

--- a/vue-with-scss/src/assets/stylesheets/components/index.scss
+++ b/vue-with-scss/src/assets/stylesheets/components/index.scss
@@ -1,7 +1,7 @@
 @import 'nesting';
 @import 'mixincomponent';
 @import 'rest';
-// @import 'forms';
+@import 'grid';
 // @import 'layout';
 // @import 'navbar';
 // @import 'side-nav';
