--- a/vuex-poster-shop/src/assets/stylesheets/settings/_layout.scss
+++ b/vuex-poster-shop/src/assets/stylesheets/settings/_layout.scss
@@ -1,7 +1,7 @@
 .root-app {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 60px 60px calc(100vh - 180px) 60px;
+  grid-template-rows: 60px 60px auto 60px;
   grid-template-areas:
     'header header'
     'search search'
