--- a/vue-with-scss/src/assets/stylesheets/components/index.scss
+++ b/vue-with-scss/src/assets/stylesheets/components/index.scss
@@ -2,9 +2,7 @@
 @import 'mixincomponent';
 @import 'rest';
 @import 'grid';
-// @import 'layout';
-// @import 'navbar';
-// @import 'side-nav';
+@import 'flex';
 
 h1 {
   color: blue;
