--- a/vue-with-scss/src/assets/stylesheets/components/_burgerNav.scss
+++ b/vue-with-scss/src/assets/stylesheets/components/_burgerNav.scss
@@ -1,99 +1,120 @@
 .nav {
+  $size: 40px;
   nav {
     margin-bottom: 100px;
     display: flex;
     justify-content: space-between;
     font-size: 26px;
-    height: 40px;
+    min-height: 40px;
     background-color: rgb(40, 40, 128);
+
+    .active-display {
+      display: block !important;
+    }
+
     .main-nav {
       display: block;
       width: 100%;
+
       ul {
         text-decoration: none;
         margin: 0;
         height: 100%;
         display: flex;
         align-items: center;
+
         li {
           padding: 0 20px;
           list-style: none;
+
           a {
             text-decoration: none;
             color: #ffffff;
           }
         }
+
         .login {
           margin-left: auto;
         }
       }
     }
 
-    .burger {
-      display: block;
+    %dimensions {
+      width: $size;
+      height: $size;
     }
-
     /* BURGER menu */
     .burger {
-      cursor: pointer;
-      height: 100px;
-      width: 40px;
-      border: 1px solid red;
-      display: block;
+      display: none;
+      @extend %dimensions;
+      padding-right: 6px;
+
       * {
         transition: all 0.3s;
         -webkit-transition: all 0.3s;
         box-sizing: border-box;
       }
-      input[type='checkbox']:checked {
-        .horizontal {
-          opacity: 0;
+
+      .check-input {
+        @extend %dimensions;
+        display: none;
+
+        &:checked ~ label {
+          .horizontal {
+            opacity: 0;
+          }
+
+          .diagonal.part-1 {
+            transform: rotate(135deg);
+            -webkit-transform: rotate(135deg);
+            margin-top: 18px;
+          }
+
+          .diagonal.part-2 {
+            transform: rotate(-135deg);
+            -webkit-transform: rotate(-135deg);
+            margin-top: -22px;
+          }
         }
       }
+
       label {
+        cursor: pointer;
         div {
           height: 5px;
           width: 100%;
-          background-color: #d11d1d;
           margin: 6px 0;
+          background-color: #fff;
         }
       }
     }
-    /*
 
-    .burger .spinner2 {
-      position: absolute;
-      height: 5px;
-      width: 100%;
-      background-color: #ffffff;
+    /* Media query*/
+
+    @media (min-width: 1025px) {
+      .main-nav {
+        display: block;
+      }
     }
-    .burger .diagonal.part-1 {
-      position: relative;
-      float: left;
+
+    @media (max-width: 1024px) {
+      .main-nav {
+        display: none;
+        ul {
+          display: flex;
+          flex-direction: column;
+
+          .login {
+            margin-left: 0;
+            padding-bottom: 6px;
+          }
+        }
+      }
+
+      .burger {
+        display: block;
+        margin-left: auto;
+      }
     }
-    .burger .horizontal {
-      position: relative;
-      float: left;
-      margin-top: 7px;
-    }
-    .burger .diagonal.part-2 {
-      position: relative;
-      float: left;
-      margin-top: 6px;
-    }
-    .burger input[type='checkbox']:checked ~ .spinner-spin2 > .horizontal {
-      opacity: 0;
-    }
-    .burger input[type='checkbox']:checked ~ .spinner-spin2 > .diagonal.part-1 {
-      transform: rotate(135deg);
-      -webkit-transform: rotate(135deg);
-      margin-top: 10px;
-    }
-    .burger input[type='checkbox']:checked ~ .spinner-spin2 > .diagonal.part-2 {
-      transform: rotate(-135deg);
-      -webkit-transform: rotate(-135deg);
-      margin-top: -16px;
-    }
-    */
   }
 }
