Adding calendar look for days in month

--- a/vue-calendar/src/assets/stylesheets/components/index.scss
+++ b/vue-calendar/src/assets/stylesheets/components/index.scss
@@ -1,6 +1,1 @@
-@import 'main-nav';
-@import 'header';
-@import 'movie';
-@import 'filter';
-@import 'footer';
-@import 'detail';
+@import 'calendar';
