--- a/vue-calendar/src/assets/stylesheets/settings/_colors.scss
+++ b/vue-calendar/src/assets/stylesheets/settings/_colors.scss
@@ -1,14 +1,10 @@
-$rich-black: #0a1128;
-$oxford-blue: #001f54;
-$bondi-blue: #009fb7;
-$winter-wizard: #97dffc;
-$oxford-dark-blue: #0d2149;
+$dusty-gray: #999;
+$gallery: #eeeeee;
+$alto: #ddd;
+$bittersweet: #ff6f69;
+$buttermilk: rgba(255, 238, 173, 0.4);
+$vista-blue: #42b983;
+$pink: rgba(255, 182, 193, 0.3);
+$pickled-bluewood: #35495e;
 
-$mine-shaft: #3f3f3f;
-$charcoal: #232323;
-$cod-gray: #141414;
-$sunshade: #ffa624;
-$dove-gray: #6e6e6e;
-$bright-red: #b50010;
-$white: #ffffff;
-$alto: #dcdcdc;
+$calendar-border: 1px solid $alto;
