--- a/vue-calendar/src/assets/stylesheets/components/_calendar.scss
+++ b/vue-calendar/src/assets/stylesheets/components/_calendar.scss
@@ -10,6 +10,52 @@
     padding: 0.5rem;
   }
 
+  .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    font-size: $fs-header;
+
+    div:first-child {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin: 1rem 0;
+      img {
+        width: 50px;
+        height: 50px;
+      }
+      h1 {
+        margin: 0 0 0 0.5rem;
+        color: $pickled-bluewood;
+        padding-top: 7px;
+      }
+    }
+
+    div:last-child {
+      font-weight: bold;
+      button {
+        color: $dusty-gray;
+        font-size: 1rem;
+        padding: 0;
+        width: 20px;
+        background-color: white;
+        user-select: none;
+        border: 1px solid $alto;
+        border-radius: 2px;
+        margin-left: 0.25rem;
+        &:focus {
+          outline: none;
+        }
+        &:hover {
+          color: $pickled-bluewood;
+          box-shadow: 0 2px 2px $alto;
+        }
+      }
+    }
+  }
+
   .day-bar {
     @extend %calendar-row;
     div {
