--- a/vue-calendar/src/assets/stylesheets/settings/_colors.scss
+++ b/vue-calendar/src/assets/stylesheets/settings/_colors.scss
@@ -7,4 +7,10 @@ $vista-blue: #42b983;
 $pink: rgba(255, 182, 193, 0.3);
 $pickled-bluewood: #35495e;
 
+$khaki: #c1b098;
+$alice-blue: #f2f9ff;
+$blue-jeans: #54aeff;
+$bdazzeld-blue: #335c81;
+$sky-blue: #65afff;
+
 $calendar-border: 1px solid $alto;
