--- a/vue-calendar/src/assets/stylesheets/settings/_fonts.scss
+++ b/vue-calendar/src/assets/stylesheets/settings/_fonts.scss
@@ -1,5 +1,6 @@
 $fs-logo: 30px;
-$fs-header: 24px;
-$fs-small-headers: 20px;
+$fs-header: 26px;
+$fs-small-headers: 23px;
+$fs-nav: 20px;
 $fs-text: 16px;
 $fs-rest: 14px;
