Adding footer and navbar

--- a/vue-calendar/src/assets/stylesheets/components/_calendar.scss
+++ b/vue-calendar/src/assets/stylesheets/components/_calendar.scss
@@ -16,6 +16,7 @@
     justify-content: space-between;
     align-items: flex-end;
     font-size: $fs-header;
+    border-bottom: 1px solid #ddd;
 
     .logo {
       color: $bdazzeld-blue;
