--- a/vue-calendar/src/assets/stylesheets/components/_todo.scss
+++ b/vue-calendar/src/assets/stylesheets/components/_todo.scss
@@ -1,7 +1,7 @@
 .todo-wrapp {
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: auto 40%;
+  grid-template-rows: auto auto auto;
   grid-template-areas:
     'header header'
     'todo add'
@@ -82,6 +82,14 @@
       margin-bottom: 6px;
       color: $bdazzeld-blue;
       font-size: 24px;
+      button {
+        background-color: $bdazzeld-blue;
+        width: 100%;
+        cursor: pointer;
+        &:hover {
+          background-color: #4553a0;
+        }
+      }
     }
 
     input[type='text'] {
@@ -103,10 +111,9 @@
       border: none;
       border-radius: 4px;
       cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #45a049;
+      &:hover {
+        background-color: #45a049;
+      }
     }
   }
 }
