--- a/vue-calendar/src/assets/stylesheets/components/_todo.scss
+++ b/vue-calendar/src/assets/stylesheets/components/_todo.scss
@@ -17,6 +17,9 @@
       font-size: 28px;
       border-bottom: 1px solid #ddd;
       text-align: center;
+      button {
+        float: left;
+      }
     }
   }
 
